@@ -16,6 +16,7 @@
  - CloudFront methods had dates appended to them. Now all methods don't have the
    date appended, so anyone using CloudFront should be aware of that API change
  - New iterators for EC2 and Glacier
+ - New caller: Paws::Net::FurlCaller. Uses Furl to do HTTP calls
 
  - S3 API update: Support for ServerSideEncryption 
  - KMS API update: New operations: CancelKeyDeletion ListRetirableGrants ScheduleKeyDeletion and docu update
